# AAAI2027

./: .gitattributes  .gitignore  .gitmodules  README.md
Code-AAAI-最终版/: .gitignore  README.md
Code-AAAI-最终版/_source_snapshots/Code-AAAI-V2版/: .gitignore  README.md  pyproject.toml
Code-AAAI-最终版/_source_snapshots/Code-AAAI-V2版/configs/: ablation_matrix.yaml  baseline_lats.yaml  control_task.yaml  datasets.yaml  foreact_4b_milestone.yaml  readiness.yaml  teacher_trajectories.yaml
Code-AAAI-最终版/_source_snapshots/Code-AAAI-V2版/docs/: BENCHMARK_SETUP.md  COMPLETION_AUDIT.md  DATASETS_AND_BASELINES.md  DATA_FORMAT.md  EXPERIMENTS.md  FULL_TRAINING.md  REPRODUCIBILITY.md
Code-AAAI-最终版/_source_snapshots/Code-AAAI-V2版/examples/tool_schemas/: plandepth_tools.json
Code-AAAI-最终版/_source_snapshots/Code-AAAI-V2版/scripts/: check_repo.sh  install_external_packages.sh  run_ablation_matrix.sh  run_smoke.sh
Code-AAAI-最终版/_source_snapshots/Code-AAAI-V2版/src/foreact/: cli.py  io.py
Code-AAAI-最终版/_source_snapshots/Code-AAAI-V2版/src/foreact/analysis/: __init__.py  eld_probe.py  exports.py  mechanism.py  visualize.py
Code-AAAI-最终版/_source_snapshots/Code-AAAI-V2版/src/foreact/baselines/: __init__.py  registry.py  runners.py
Code-AAAI-最终版/_source_snapshots/Code-AAAI-V2版/src/foreact/data/: benchmarks.py  prepare.py  react_parser.py  soft_targets.py
Code-AAAI-最终版/_source_snapshots/Code-AAAI-V2版/tests/: test_ablation.py  test_cli_smoke.py  test_dataset_status.py  test_losses.py  test_policies.py  test_schema_tools.py  test_torch_optional.py  test_visualize.py  test_zeta.py
(+1967 files in other folders)
