[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "foreact"
version = "0.1.0"
description = "ForeAct reproducible experiment repository for latent future-action prediction in LLM agents."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
torch = ["torch>=2.1", "transformers>=4.40"]
viz = ["matplotlib>=3.7"]
bench = [
  "datasets>=2.18",
  "docker>=7.0",
  "modal>=0.64",
  "litellm>=1.80.15",
  "typer>=0.12",
]
appworld = ["appworld"]
tau2 = ["tau2"]
swe = ["swebench", "mini-swe-agent"]
openrlhf = ["openrlhf"]

[project.scripts]
foreact = "foreact.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
